--- a/package.json
+++ b/package.json
@@ -15,14 +15,24 @@
   "author": "Shuvo",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-handlebars": "^5.1.0",
+    "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
     "lodash": "^4.17.20",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.1",
     "mongoose": "^5.10.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
