--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "mongodb": "^3.6.1",
     "mongoose": "^5.10.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sharp": "^0.26.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
